修复侧边导航栏显示问题

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
 {{/* 注意: 在define作用域外不能有任何文本(包括注释), 否则模板块就无效了 */}}
 
   
-<main class="row">
+<main class="main container-fluid row">
   <div class="col-sm-2 sidebar">
     <div>{{ partial "navigator.html" . }}</div>
     <div class="outline">{{ partial "tableOfContents" . }}</div>
