修改标题栏样式,点击标题栏标题返回顶部

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,8 +1,8 @@
 
 <header class="container-fluid header">
   <div class="row">
-    <div class="col-5 align-self-center"><a href="{{ .Site.Home.RelPermalink }}">{{ .Site.Title }}</a></div>
-    <div class="col-5 align-self-center">{{ .Title }}</div>
-    <div class="col-2 align-self-center"><a href="#the-top">TOP</a></div>
+    <div class="col-5 "><a header="" href="{{ .Site.Home.RelPermalink }}">{{ .Site.Title }}</a></div>
+    <div class="col-7 text-ellipsis"><a header="" href="#the-top">{{ .Title }}</a></div>
+    
   </div>
 </header>
