--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,6 +4,7 @@
   background-color: black;
   color: white;
   position: fixed;
+  height: 30px;
 }
 
 .main {
@@ -38,8 +39,25 @@
   padding: 3em 0em 0em 0em;
 }
 
+a[header] {
+  color: inherit;
+  text-decoration: none;
+}
+a:hover[header] {
+  color: inherit;
+  text-decoration: none;
+}
+
 a {
   color: inherit;
-  /* text-decoration: none; */
 }
-a:hover {color: inherit;}
+a:hover {
+  color: inherit;
+}
+
+
+.text-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
