--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,11 +2,11 @@
 {{ define "main" }}
 
   
-<main class="main container-fluid row">
-  <div class="col-sm-2 sidebar">
-    <div class="row">{{ partial "navigator.html" . }}</div>
+<main class="main">
+  <div class="sidebar">
+    <div class="">{{ partial "navigator.html" . }}</div>
   </div>
-  <div class="col-sm-7">
+  <div class="">
     {{ .Content }}
   </div>
 
