--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 
 <div>
-  <a href="#the-top">返回顶部</a>
+  <!-- <a href="#the-top">返回顶部</a>
   <p>----------------------</p>
-  <p>copyright © kaneha 2024</p>
+  <p>copyright © kaneha 2024</p> -->
 </div>
