--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,14 +5,14 @@
 {{/* 注意: 在define作用域外不能有任何文本(包括注释), 否则模板块就无效了 */}}
 
   
-<main class="main container-fluid row">
-  <div class="col-sm-2 sidebar">
+<main class="main">
+  <div class="sidebar">
     <div>{{ partial "navigator.html" . }}</div>
     <div class="outline">{{ partial "tableOfContents" . }}</div>
   </div>
     
   </div>
-  <div class="col-sm-7 content">{{ .Content }}</div>
+  <div class="content">{{ .Content }}</div>
 </main>
 {{ end }}
 
