--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -12,7 +12,9 @@
   </div>
     
   </div>
-  <div class="content">{{ .Content }}</div>
+  <div class="content-container">
+    <div class="content">{{ .Content }}</div>
+  </div>
 </main>
 {{ end }}
 
