--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,9 +6,9 @@
 
   <!-- 引入bootstrap -->
   <!-- 最新编译并压缩的 CSS -->
-  <link href="https://www.w3school.com.cn/lib/bs/bootstrap.css" rel="stylesheet">
+  <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.css" rel="stylesheet">
   <!-- 最新编译的 JavaScript -->
-  <script src="https://www.w3school.com.cn/lib/bs/bootstrap.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.js"></script>
 
   {{ range resources.Match "css/*.css" }}
   <link rel="stylesheet" type="text/css" href="{{ .RelPermalink }}">
