--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- 引入bootstrap -->
-  <!-- 最新编译并压缩的 CSS -->
-  <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.css" rel="stylesheet">
-  <!-- 最新编译的 JavaScript -->
-  <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.js"></script>
+
+  <!-- 从字节cdn引入 bootstrap -->
+   <!-- 字节跳动静态资源公共库: https://cdn.bytedance.com/ -->
+  <link href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/css/bootstrap.css" rel="stylesheet">
+  <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/js/bootstrap.js"></script>
 
   {{ range resources.Match "css/*.css" }}
   <link rel="stylesheet" type="text/css" href="{{ .RelPermalink }}">
